project in progress left modal build up

--- a/src/styles/css/bundle.css
+++ b/src/styles/css/bundle.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 @import "./variable.css";
-@import "./generalCard.css";
-@import "./dailyCard.css";
+@import "./dashboard.css";
+@import "./overview.css";
+@import "./modal.css";
 @import "./app.css";
