--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -1,17 +1,21 @@
+.general-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
+
 .general-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: #252a41;
   padding: 10px 0;
   margin: 15px;
-  color: #8b97c6;
   height: 200px;
   flex-basis: 25%;
   max-width: 225px;
   min-width: 190px;
-  border-radius: 3px; }
+  border-radius: 3px;
+  cursor: pointer; }
   .general-card .user-name-container {
     display: flex;
     align-items: center;
@@ -22,12 +26,12 @@
       font-size: 0.8rem; }
   .general-card .general-number {
     font-weight: 700;
-    font-size: 3.5rem;
-    color: white; }
+    font-size: 3.5rem; }
   .general-card .general-desc {
     text-transform: uppercase;
     letter-spacing: 4px;
-    font-size: 0.8rem; }
+    font-size: 0.8rem;
+    font-weight: 400; }
   .general-card .general-daily {
     font-size: 0.8rem;
     padding: 1rem; }
