--- a/src/styles/sass/dashboard.scss
+++ b/src/styles/sass/dashboard.scss
@@ -1,19 +1,24 @@
 @import "./variable.scss";
 
+.general-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .general-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: $dark-desaturated-blue-card;
   padding: 10px 0;
   margin: 15px;
-  color: $desaturated-blue-text;
   height: 200px;
   flex-basis: 25%;
   max-width: 225px;
   min-width: 190px;
   border-radius: 3px;
+  cursor: pointer;
 
   .user-name-container {
     display: flex;
@@ -30,13 +35,13 @@
   .general-number {
     font-weight: 700;
     font-size: 3.5rem;
-    color: $white-text;
   }
 
   .general-desc {
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 0.8rem;
+    font-weight: 400;
   }
   .general-daily {
     font-size: 0.8rem;
