--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -5,22 +5,39 @@
   font-size: 14px;
   box-sizing: border-box; }
 
-#root {
-  background: linear-gradient(180deg, #1f212e 25%, #1e202a 25%); }
+body {
+  background-attachment: fixed; }
 
 .app {
-  height: 100vh;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   max-width: 1440px;
-  margin: 0 auto;
-  background: linear-gradient(180deg, #1f212e 25%, #1e202a 25%); }
+  margin: 0 auto; }
 
-.general-container {
+header {
+  flex-basis: 100%;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap; }
+  justify-content: space-around;
+  align-items: center;
+  margin: 30px 0; }
+  header .toggle-container {
+    display: flex;
+    align-items: center; }
+    header .toggle-container .toggle-name {
+      padding-right: 15px; }
+
+h1 {
+  font-size: 2rem; }
+
+h2 {
+  font-size: 1.7rem;
+  flex-basis: 82%;
+  padding: 20px 0; }
+
+h3 {
+  font-size: 0.9rem;
+  font-weight: 400; }
 
 .border {
   border-top: 4px solid white; }
@@ -38,8 +55,157 @@
 .youtube {
   border-color: #c4032a; }
 
+.dark-mode .general-card:hover,
+.dark-mode .daily-card:hover {
+  background-color: #333a56; }
+
+.light-mode .general-card:hover,
+.light-mode .daily-card:hover {
+  background-color: #e1e3f0; }
+
 .status-green {
-  color: #1db489; }
+  color: #1db489 !important;
+  position: relative; }
+
+.status-green::before {
+  content: "";
+  background-image: url(../../images/icon-up.svg);
+  width: 10px;
+  height: 10px;
+  display: block;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 19px;
+  left: 0px; }
+
+.daily-perc.status-green::before {
+  top: 5px;
+  left: -15px; }
 
 .status-red {
-  color: #dc414c; }
+  color: #dc414c !important;
+  position: relative; }
+
+.status-red::before {
+  content: "";
+  background-image: url(../../images/icon-down.svg);
+  width: 10px;
+  height: 10px;
+  display: block;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 19px;
+  left: 0px; }
+
+.daily-perc.status-red::before {
+  top: 5px;
+  left: -15px; }
+
+.black-bg {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  background: linear-gradient(180deg, #1f212e 25%, #1e202a 25%);
+  background-attachment: fixed; }
+
+.light-bg {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  background: linear-gradient(180deg, #f5f7ff 25%, #ffffff 25%);
+  background-attachment: fixed; }
+
+.dark-mode span.primary,
+.dark-mode h1,
+.dark-mode h2 {
+  transition: all 0.25s ease-in-out;
+  color: white; }
+
+.dark-mode span {
+  transition: all 0.25s ease-in-out;
+  color: #8b97c6;
+  font-weight: 700; }
+
+.dark-mode div.general-card,
+.dark-mode div.daily-card {
+  transition: all 0.25s ease-in-out;
+  background-color: #252a41; }
+
+.dark-mode div.modal-box {
+  background-color: #1f212e; }
+
+.dark-mode div.chart-container {
+  background-color: #1e202a; }
+
+.light-mode span.primary,
+.light-mode h1,
+.light-mode h2 {
+  color: #1e202a;
+  transition: all 0.25s ease-in-out; }
+
+.light-mode span {
+  color: #63687e;
+  transition: all 0.25s ease-in-out;
+  font-weight: 700; }
+
+.light-mode div.general-card,
+.light-mode div.daily-card {
+  background-color: #f0f2fa;
+  transition: all 0.25s ease-in-out; }
+
+.light-mode div.modal-box {
+  background-color: #f5f7ff; }
+
+.light-mode div.chart-container {
+  background-color: #ffffff; }
+
+.toggle-name {
+  font-weight: 700; }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 43px;
+  height: 23px; }
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #aeb3cb;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s; }
+
+input:checked + .slider {
+  background: linear-gradient(90deg, #378fe6 0%, #3eda82 100%); }
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3; }
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px; }
+
+.slider.round:before {
+  border-radius: 50%; }
