--- a/src/styles/sass/variable.scss
+++ b/src/styles/sass/variable.scss
@@ -15,27 +15,32 @@ $youtube: hsl(348, 97%, 39%);
 
 //Dark Theme
 
-$toggle-dark: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+$toggle-dark: linear-gradient(
+  90deg,
+  rgba(55, 143, 230, 1) 0%,
+  rgba(62, 218, 130, 1) 100%
+);
 
 //Light Theme
 
 $toggle-light: hsl(230, 22%, 74%);
 
 //Dark Theme interface
-
-$very-dark-blue-bg: hsl(230, 17%, 14%);
-$very-dark-blue-top-bg: hsl(232, 19%, 15%);
-$dark-desaturated-blue-card: hsl(228, 28%, 20%);
+$dark-bg: linear-gradient(180deg, #1f212e 25%, #1e202a 25%);
+$dark-top-bg: #1f212e;
+$dark-simple-bg: #1e202a;
+$dark-desaturated-blue-card: #252a41;
 $desaturated-blue-text: hsl(228, 34%, 66%);
-$white-text: hsl(0, 0%, 100%);
+$dark-text: hsl(0, 0%, 100%);
+$modal-back: hsl(243, 51%, 70%);
 
 //Light Theme interface
-
-$white-bg: hsl(0, 0%, 100%);
-$very-pale-blue-top-bg: hsl(225, 100%, 98%);
-$light-grayish-blue-card: hsl(227, 47%, 96%);
-$dark-grayish-blue-text: hsl(228, 12%, 44%);
-$very-dark-blue-text: hsl(230, 17%, 14%);
+$light-bg: linear-gradient(180deg, #f5f7ff 25%, #ffffff 25%);
+$light-top-bg: #f5f7ff;
+$light-simple-bg: #ffffff;
+$light-grayish-blue-card: #f0f2fa;
+$grayish-blue-text: hsl(228, 12%, 44%);
+$light-text: hsl(230, 17%, 14%);
 
 //chart
 $desaturated-purple-chart: hsl(243, 51%, 70%);
