final project challenge

--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -15,6 +15,11 @@
   max-width: 225px;
   min-width: 190px;
   border-radius: 3px;
+  position: relative;
+  top: 30px;
+  animation: fadeInMove 600ms ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 300ms;
   cursor: pointer; }
   .general-card .user-name-container {
     display: flex;
