--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -1,3 +1,195 @@
+.general-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
+
+.general-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 0;
+  margin: 15px;
+  height: 200px;
+  flex-basis: 25%;
+  max-width: 225px;
+  min-width: 190px;
+  border-radius: 3px;
+  position: relative;
+  top: 30px;
+  animation: fadeInMove 600ms ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 300ms;
+  cursor: pointer; }
+  .general-card .user-name-container {
+    display: flex;
+    align-items: center;
+    padding: 1rem; }
+    .general-card .user-name-container img {
+      margin-right: 5px; }
+    .general-card .user-name-container .user-name {
+      font-size: 0.8rem; }
+  .general-card .general-number {
+    font-weight: 700;
+    font-size: 3.5rem; }
+  .general-card .general-desc {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 0.8rem;
+    font-weight: 400; }
+  .general-card .general-daily {
+    font-size: 0.8rem;
+    padding: 1rem; }
+
+.daily-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto; }
+
+.daily-card {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-basis: 25%;
+  padding: 20px;
+  margin: 15px;
+  max-width: 225px;
+  min-width: 200px;
+  flex-direction: column;
+  border-radius: 5px;
+  position: relative;
+  top: 30px;
+  opacity: 0;
+  animation: fadeInMove 700ms ease-in-out forwards;
+  animation-delay: 500ms;
+  cursor: pointer; }
+  .daily-card .daily-row:first-child {
+    margin-bottom: 20px; }
+
+.daily-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.daily-desc {
+  font-size: 0.9rem; }
+
+.daily-number {
+  font-weight: 700;
+  font-size: 2rem; }
+
+.daily-perc {
+  font-size: 0.8rem;
+  align-self: flex-end; }
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  opacity: 0;
+  animation: fadeIn 500ms ease-in-out forwards; }
+
+.modal-box {
+  position: relative;
+  border-radius: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  display: flex;
+  flex-direction: column; }
+  .modal-box button {
+    align-self: flex-end;
+    background-color: transparent;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+    position: relative;
+    z-index: 101;
+    left: -20px;
+    top: 18px; }
+
+.modal-back {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.modal-number {
+  font-weight: 700;
+  font-size: 2.5rem; }
+
+span.modal-number.status-green::before {
+  left: -17px; }
+
+span.modal-number.status-red::before {
+  left: -17px; }
+
+.info-container {
+  margin-left: 50px; }
+
+.modal-data {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px; }
+  .modal-data span:not(:first-child) {
+    margin-left: 20px; }
+
+.text-container {
+  display: flex;
+  flex-basis: 25%;
+  align-items: center; }
+
+#first-text {
+  flex-basis: 10%; }
+
+#second-text {
+  flex-basis: 51%; }
+
+#third-text {
+  flex-basis: 44%; }
+
+.modal-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 30px; }
+  .modal-title h2 {
+    padding-bottom: 10px !important; }
+
+.primary-modal {
+  font-weight: 400 !important; }
+
+.user-name-modal {
+  display: flex;
+  align-items: center; }
+  .user-name-modal img {
+    margin-right: 5px; }
+
+.chart-container {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px; }
+
+.recharts-legend-wrapper {
+  display: none; }
+
+.recharts-wrapper {
+  width: auto !important; }
+
+.recharts-surface {
+  width: 95% !important; }
+
 * {
   margin: 0px;
   padding: 0px;
@@ -39,6 +231,12 @@ h3 {
   font-size: 0.9rem;
   font-weight: 400; }
 
+h2,
+header {
+  opacity: 0;
+  animation: fadeIn 600ms ease-in-out forwards;
+  animation-delay: 300ms; }
+
 .border {
   border-top: 4px solid white; }
 
@@ -54,14 +252,6 @@ h3 {
 
 .youtube {
   border-color: #c4032a; }
-
-.dark-mode .general-card:hover,
-.dark-mode .daily-card:hover {
-  background-color: #333a56; }
-
-.light-mode .general-card:hover,
-.light-mode .daily-card:hover {
-  background-color: #e1e3f0; }
 
 .status-green {
   color: #1db489 !important;
@@ -107,12 +297,6 @@ h3 {
   background: linear-gradient(180deg, #1f212e 25%, #1e202a 25%);
   background-attachment: fixed; }
 
-.light-bg {
-  opacity: 1;
-  transition: opacity 0.25s ease-in-out;
-  background: linear-gradient(180deg, #f5f7ff 25%, #ffffff 25%);
-  background-attachment: fixed; }
-
 .dark-mode span.primary,
 .dark-mode h1,
 .dark-mode h2 {
@@ -135,6 +319,16 @@ h3 {
 .dark-mode div.chart-container {
   background-color: #1e202a; }
 
+.dark-mode .general-card:hover,
+.dark-mode .daily-card:hover {
+  background-color: #333a56; }
+
+.light-bg {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  background: linear-gradient(180deg, #f5f7ff 25%, #ffffff 25%);
+  background-attachment: fixed; }
+
 .light-mode span.primary,
 .light-mode h1,
 .light-mode h2 {
@@ -156,6 +350,10 @@ h3 {
 
 .light-mode div.chart-container {
   background-color: #ffffff; }
+
+.light-mode .general-card:hover,
+.light-mode .daily-card:hover {
+  background-color: #e1e3f0; }
 
 .toggle-name {
   font-weight: 700; }
@@ -203,9 +401,51 @@ input:checked + .slider:before {
   -ms-transform: translateX(20px);
   transform: translateX(20px); }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px; }
 
 .slider.round:before {
   border-radius: 50%; }
+
+@media (max-width: 1317px) {
+  .text-container {
+    flex-basis: 40%;
+    margin-bottom: 10px; }
+  .modal-box {
+    width: 80%; } }
+
+@media (max-width: 550px) {
+  .toggle-container {
+    flex-direction: column; }
+    .toggle-container label {
+      top: 10px; }
+  .chart-container {
+    padding: 10px; } }
+
+@media (max-width: 490px) {
+  .modal-data {
+    flex-direction: column; }
+  header div h1 {
+    font-size: 1.6rem; }
+  header div span {
+    font-size: 0.8rem; } }
+
+@keyframes fadeInMove {
+  from {
+    opacity: 0;
+    top: 30px; }
+  to {
+    opacity: 1;
+    top: 0px; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
