--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -4,7 +4,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 100; }
+  z-index: 100;
+  opacity: 0;
+  animation: fadeIn 500ms ease-in-out forwards; }
 
 .modal-box {
   position: relative;
@@ -19,8 +21,10 @@
     align-self: flex-end;
     background-color: transparent;
     text-decoration: none;
+    cursor: pointer;
     border: none;
     position: relative;
+    z-index: 101;
     left: -20px;
     top: 18px; }
 
@@ -35,6 +39,54 @@
 .modal-number {
   font-weight: 700;
   font-size: 2.5rem; }
+
+span.modal-number.status-green::before {
+  left: -17px; }
+
+span.modal-number.status-red::before {
+  left: -17px; }
+
+.info-container {
+  margin-left: 50px; }
+
+.modal-data {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px; }
+  .modal-data span:not(:first-child) {
+    margin-left: 20px; }
+
+.text-container {
+  display: flex;
+  flex-basis: 25%;
+  align-items: center; }
+
+#first-text {
+  flex-basis: 10%; }
+
+#second-text {
+  flex-basis: 51%; }
+
+#third-text {
+  flex-basis: 44%; }
+
+.modal-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 30px; }
+  .modal-title h2 {
+    padding-bottom: 10px !important; }
+
+.primary-modal {
+  font-weight: 400 !important; }
+
+.user-name-modal {
+  display: flex;
+  align-items: center; }
+  .user-name-modal img {
+    margin-right: 5px; }
 
 .chart-container {
   padding: 30px;
