--- a/src/styles/css/overview.css
+++ b/src/styles/css/overview.css
@@ -17,6 +17,11 @@
   min-width: 200px;
   flex-direction: column;
   border-radius: 5px;
+  position: relative;
+  top: 30px;
+  opacity: 0;
+  animation: fadeInMove 700ms ease-in-out forwards;
+  animation-delay: 500ms;
   cursor: pointer; }
   .daily-card .daily-row:first-child {
     margin-bottom: 20px; }
@@ -36,7 +41,3 @@
 .daily-perc {
   font-size: 0.8rem;
   align-self: flex-end; }
-
-/* 
-
-daily-perc */
