--- a/src/styles/sass/modal.scss
+++ b/src/styles/sass/modal.scss
@@ -5,6 +5,8 @@
   left: 0;
   right: 0;
   z-index: 100;
+  opacity: 0;
+  animation: fadeIn 500ms ease-in-out forwards;
 }
 
 .modal-box {
@@ -20,8 +22,10 @@
     align-self: flex-end;
     background-color: transparent;
     text-decoration: none;
+    cursor: pointer;
     border: none;
     position: relative;
+    z-index: 101;
     left: -20px;
     top: 18px;
   }
@@ -39,6 +43,67 @@
 .modal-number {
   font-weight: 700;
   font-size: 2.5rem;
+}
+
+span.modal-number.status-green::before {
+  left: -17px;
+}
+
+span.modal-number.status-red::before {
+  left: -17px;
+}
+
+.info-container {
+  margin-left: 50px;
+}
+
+.modal-data {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  span:not(:first-child) {
+    margin-left: 20px;
+  }
+}
+
+.text-container {
+  display: flex;
+  flex-basis: 25%;
+  align-items: center;
+}
+
+#first-text {
+  flex-basis: 10%;
+}
+
+#second-text {
+  flex-basis: 51%;
+}
+
+#third-text {
+  flex-basis: 44%;
+}
+
+.modal-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 30px;
+  h2 {
+    padding-bottom: 10px !important;
+  }
+}
+
+.primary-modal {
+  font-weight: 400 !important;
+}
+.user-name-modal {
+  display: flex;
+  align-items: center;
+  img {
+    margin-right: 5px;
+  }
 }
 
 //rechart styles
